kubeflow/common/istio/build/networking.istio.io_v1alpha3_gateway_kubeflow-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  annotations:
    internal.kpt.dev/upstream-identifier: networking.istio.io|Gateway|default|kubeflow-gateway
  name: kubeflow-gateway
  namespace: kubeflow
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
